Registrar-servicio y fonts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<div class="a11y-font-controls" role="toolbar" aria-label="Controles de tamaño de letra">
+	<button type="button" class="btn-a11y" (click)="decreaseFont()" aria-label="Reducir tamaño de letra" title="Reducir letra">A-</button>
+	<button type="button" class="btn-a11y" (click)="resetFont()" aria-label="Restablecer tamaño de letra" title="Restablecer">A</button>
+	<button type="button" class="btn-a11y" (click)="increaseFont()" aria-label="Aumentar tamaño de letra" title="Aumentar letra">A+</button>
+</div>
+
 <router-outlet />
