--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="login-container">
+<div class="login-centered-bg">
+  <div class="login-container">
 
   <div class="logo-login">
     <img class="logo-login-img" src="../../../assets/imagen/logo.png" alt="">
@@ -54,4 +55,5 @@
   </form>
 
   <p *ngIf="mensajeError" class="error">{{ mensajeError }}</p>
+</div>
 </div>
