--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,24 @@
 <!-- NavBar -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-    <!-- Imagen -->
-    <div class="logo-login">
-        <img class="logo-login-img" src="../../../assets/imagen/logo.png" alt="">
+        <!-- Logo/Marca -->
+        <div class="logo-login">
+            <img class="logo-login-img" src="../../../assets/imagen/logo.png" alt="El Dato" />
+        </div>
+
+        <!-- Acción Login/Registro (alineado a la derecha y con margen para A11y) -->
+        <div class="d-flex ms-auto align-items-center a11y-safe-right">
+            <button
+                type="button"
+                class="login-btn btn btn-success"
+                (click)="routeLogin()"
+                aria-label="Ir a Iniciar Sesión o Registro"
+            >
+                Iniciar Sesión / Registro
+            </button>
+        </div>
     </div>
-      <form class="d-flex" role="search">
-        <button class="login-btn btn btn-outline-success" type="submit" (click)="routeLogin()">Iniciar Sesión /Registro</button>
-      </form>
-    </div>
+  
 </nav>
 
 <!-- Hero Section -->
